--- a/notebooks/featurestore/hsfs/online_featurestore/2_produce_transactions.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/2_produce_transactions.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "# Generate Credit Card Transactions"
+    "# Generate credit card transactions data and send to kafka topic."
    ]
   },
   {
