--- a/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/3_stream-ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1258f615",
+   "id": "e6e80ad1",
    "metadata": {},
    "source": [
     "## Import necessary libraries"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "81d2ed42",
+   "id": "657bf02e",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>3</td><td>application_1618520805810_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1618520805810_0003/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e01_1618520805810_0003_01_000001/card_fraud__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>8</td><td>application_1619136786197_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619136786197_0009/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619136786197_0009_01_000001/OnlineFSDemo__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -48,22 +48,23 @@
     "from pyspark.sql.functions import from_json, window, avg,count, stddev, explode, date_format,col\n",
     "from pyspark.sql.types import StructField, StructType, StringType, DoubleType, TimestampType, LongType, IntegerType\n",
     "\n",
-    "from hops import kafka, tls"
+    "from hops import kafka, tls, hdfs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ee27e0ca",
+   "id": "511add7d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# name of the kafka topic to read card transactions from\n",
     "KAFKA_TOPIC_NAME = \"credit_card_transactions\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45e99fb6",
+   "id": "e99da095",
    "metadata": {},
    "source": [
     "## Create a stream from the kafka topic\n"
@@ -72,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "065431c5",
+   "id": "3fe421d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,35 +96,35 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d6e5a20a",
+   "id": "f7022bf6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define schema to read from kafka topic \n",
     "parse_schema = StructType([StructField('tid', StringType(), True),\n",
-    "                         StructField('datetime', StringType(), True),\n",
-    "                         StructField('cc_num', StringType(), True),\n",
-    "                         StructField('amount', StringType(), True)])"
+    "                           StructField('datetime', StringType(), True),\n",
+    "                           StructField('cc_num', StringType(), True),\n",
+    "                           StructField('amount', StringType(), True)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5028c597",
+   "id": "0b9da8a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Deserialise data from and create streaming query\n",
     "df_deser = df_read.selectExpr(\"CAST(value AS STRING)\")\\\n",
-    ".select(from_json(\"value\", parse_schema).alias(\"value\"))\\\n",
-    ".select(\"value.tid\", \"value.datetime\", \"value.cc_num\", \"value.amount\")\\\n",
-    ".selectExpr(\"CAST(tid as string)\", \"CAST(datetime as string)\", \"CAST(cc_num as long)\", \"CAST(amount as double)\")"
+    "                   .select(from_json(\"value\", parse_schema).alias(\"value\"))\\\n",
+    "                   .select(\"value.tid\", \"value.datetime\", \"value.cc_num\", \"value.amount\")\\\n",
+    "                   .selectExpr(\"CAST(tid as string)\", \"CAST(datetime as string)\", \"CAST(cc_num as long)\", \"CAST(amount as double)\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a455d4ca",
+   "id": "91e44f42",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0e9209d2",
+   "id": "f4a30cc5",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0fb46b8",
+   "id": "0758c0d0",
    "metadata": {},
    "source": [
     "## Create windowing aggregations over different time windows using spark streaming."
@@ -170,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "783b1b8b",
+   "execution_count": 8,
+   "id": "8a9d4e5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "043bd255",
+   "execution_count": 9,
+   "id": "c4adf5df",
    "metadata": {},
    "outputs": [
     {
@@ -206,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a8924dd6",
+   "execution_count": 10,
+   "id": "15ac9c1e",
    "metadata": {},
    "outputs": [
     {
@@ -228,8 +229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0203a929",
+   "execution_count": 11,
+   "id": "39bb72ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,8 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2500e719",
+   "execution_count": 12,
+   "id": "76d79736",
    "metadata": {},
    "outputs": [
     {
@@ -263,8 +264,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ef80f9a5",
+   "execution_count": 13,
+   "id": "c3b88724",
    "metadata": {},
    "outputs": [
     {
@@ -285,8 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "7b6c3022",
+   "execution_count": 14,
+   "id": "df9aa996",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "222cfc1d",
+   "execution_count": 15,
+   "id": "a313cca3",
    "metadata": {},
    "outputs": [
     {
@@ -320,8 +321,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f0cd2dc3",
+   "execution_count": 16,
+   "id": "c2cc3caf",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "163278e7",
+   "id": "b9e454d3",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -350,8 +351,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "cc9fa251",
+   "execution_count": 17,
+   "id": "53952d51",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0d8b218",
+   "id": "a2fecf15",
    "metadata": {},
    "source": [
     "## Get feature groups from hopsworks feature store."
@@ -379,8 +380,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "3599327f",
+   "execution_count": 18,
+   "id": "42306617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,18 +393,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f769f4ea",
+   "id": "b7e5a41a",
    "metadata": {},
    "source": [
-    "## Insert the stream to the online feature group\n",
+    "## Insert streaming dataframes to the online feature group\n",
     "\n",
     "Now we are ready to write this streaming dataframe as a long living application to the online storage of the other feature group."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "171dfc5f",
+   "execution_count": 19,
+   "id": "9a93e7cf",
    "metadata": {},
    "outputs": [
     {
@@ -420,8 +421,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "d8154b01",
+   "execution_count": 20,
+   "id": "3bbda1cf",
    "metadata": {},
    "outputs": [
     {
@@ -438,8 +439,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "30c21af0",
+   "execution_count": 21,
+   "id": "34aa0519",
    "metadata": {},
    "outputs": [
     {
@@ -456,8 +457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "510d67ef",
+   "execution_count": 22,
+   "id": "44ebb53a",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5baf3bbe",
+   "id": "0490227a",
    "metadata": {},
    "source": [
     "### Check if spark streaming query is active"
@@ -482,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "a9047ab6",
+   "execution_count": 23,
+   "id": "2b728375",
    "metadata": {},
    "outputs": [
     {
@@ -500,8 +501,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "b5a61c89",
+   "execution_count": 24,
+   "id": "8faac066",
    "metadata": {},
    "outputs": [
     {
@@ -518,8 +519,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "07431c1e",
+   "execution_count": 25,
+   "id": "6824edc7",
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "afed0ecd",
+   "execution_count": 26,
+   "id": "ce75972f",
    "metadata": {},
    "outputs": [
     {
@@ -554,23 +555,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb398092",
+   "id": "a2f4c47a",
    "metadata": {},
    "source": [
-    "#### We can also check status of a query and exception, if any."
+    "#### We can also check status of a query and if there are any exceptions trown."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "f317ab51",
+   "execution_count": 27,
+   "id": "2add71b0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'message': 'No new data but cleaning up state', 'isDataAvailable': False, 'isTriggerActive': True}"
+      "{'message': 'Processing new data', 'isDataAvailable': True, 'isTriggerActive': True}"
      ]
     }
    ],
@@ -580,8 +581,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "bdf85b30",
+   "execution_count": 28,
+   "id": "1b14b4d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5115d0d",
+   "id": "8b231f47",
    "metadata": {},
    "source": [
     "### Lets check if data was ingested in to the online feature store"
@@ -598,18 +599,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "5b030290",
+   "execution_count": 31,
+   "id": "a9f7b6c7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+-----------------+---------------+-----------------+\n",
-      "|cc_num|num_trans_per_12h|avg_amt_per_12h|stdev_amt_per_12h|\n",
-      "+------+-----------------+---------------+-----------------+\n",
-      "+------+-----------------+---------------+-----------------+"
+      "+----------------+-----------------+------------------+------------------+\n",
+      "|cc_num          |num_trans_per_12h|avg_amt_per_12h   |stdev_amt_per_12h |\n",
+      "+----------------+-----------------+------------------+------------------+\n",
+      "|4444037300542691|7                |154.51857142857145|238.93552871214524|\n",
+      "|4609072304828342|7                |176.02714285714288|263.06316920176454|\n",
+      "|4161715127983823|10               |928.3030000000001 |1809.7934375689888|\n",
+      "|4223253728365626|13               |1201.686153846154 |2724.0564739389993|\n",
+      "|4572259224622748|9                |1291.5500000000002|2495.189283160699 |\n",
+      "|4436298663019939|11               |149.78636363636366|235.75729924109365|\n",
+      "|4231082502226286|10               |977.8430000000001 |2071.1095165208753|\n",
+      "|4159210768503456|6                |37.303333333333335|26.403001092047596|\n",
+      "|4090612125343330|15               |646.7259999999999 |1336.9214811370616|\n",
+      "|4416410688550228|11               |663.0627272727273 |1631.6188600717442|\n",
+      "|4811343280984688|6                |237.08166666666662|305.3312340666554 |\n",
+      "|4853206196105715|10               |1077.6439999999998|2793.72050986255  |\n",
+      "|4032763187099525|10               |425.006           |1204.4018071612704|\n",
+      "|4645884898081724|8                |171.48125000000002|200.51632676222223|\n",
+      "|4524584153018280|7                |160.18714285714285|223.19407330200963|\n",
+      "|4815447301191763|6                |78.35833333333333 |29.206839895248287|\n",
+      "|4872287670027309|3                |260.63666666666666|427.3684126527525 |\n",
+      "|4734811798843814|7                |122.81714285714285|166.56810466135522|\n",
+      "|4609746692923340|9                |1401.2866666666669|3007.164227935514 |\n",
+      "|4526611032294580|6                |109.52166666666666|150.55966530471125|\n",
+      "+----------------+-----------------+------------------+------------------+\n",
+      "only showing top 20 rows"
      ]
     }
    ],
@@ -619,35 +641,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "6e98b469",
+   "execution_count": 33,
+   "id": "d19e8757",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0"
+      "100"
      ]
     }
    ],
    "source": [
-    "fs.sql(\"SELECT * FROM card_transactions_1\",online=True).count()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "156880e0",
-   "metadata": {},
-   "source": [
-    "## Insert data in to offline feature group.\n",
-    "Hopsworks online feature store will store latest avaible value of feature for low latency model serving. But we will be to store data in to the offline feature store to strore historical data.  "
+    "fs.sql(\"SELECT * FROM card_transactions_12h_agg_1\",online=True).count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "5eaadcee",
+   "execution_count": 34,
+   "id": "c8f448c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+--------+------+------+\n",
+      "|tid|datetime|cc_num|amount|\n",
+      "+---+--------+------+------+\n",
+      "+---+--------+------+------+"
+     ]
+    }
+   ],
+   "source": [
+    "fs.sql(\"SELECT * FROM card_transactions_1\",online=True).show(20,False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e1c621b",
+   "metadata": {},
+   "source": [
+    "## Insert data in to offline feature group.\n",
+    "Hopsworks online feature store will store latest avaible value of feature for low latency model serving. However, we also want to store data in to the offline feature store to store historical data.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4b2d980b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,15 +708,15 @@
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_card = df_deser.writeStream.foreachBatch(foreach_batch_function_card)\\\n",
-    ".option(\"checkpointLocation\", \"hdfs:///Projects/card_fraud_demo/Resources/checkpoint-card\")\\\n",
+    ".option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-card\")\\\n",
     ".trigger(processingTime=\"10 seconds\")\\\n",
     ".start()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "6de901bb",
+   "execution_count": 38,
+   "id": "47353af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,15 +734,15 @@
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_10m = windowed10mSignalDF.writeStream.foreachBatch(foreach_batch_function_10m)\\\n",
-    ".option(\"checkpointLocation\", \"hdfs:///Projects/card_fraud_demo/Resources/checkpoint-data10m\")\\\n",
+    ".option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-data10m\")\\\n",
     ".trigger(processingTime=\"10 seconds\")\\\n",
     ".start()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "e446cbbd",
+   "execution_count": 39,
+   "id": "ff0a76df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,15 +760,15 @@
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_1h = windowed1hSignalDF.writeStream.foreachBatch(foreach_batch_function_1h)\\\n",
-    ".option(\"checkpointLocation\", \"hdfs:///Projects/card_fraud_demo/Resources/checkpoint-1h\")\\\n",
+    ".option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-1h\")\\\n",
     ".trigger(processingTime=\"10 seconds\")\\\n",
     ".start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "2471dd8e",
+   "execution_count": 40,
+   "id": "ab737278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,14 +786,14 @@
     "    batchDF.unpersist()\n",
     "\n",
     "hudi_12h = windowed12hSignalDF.writeStream.foreachBatch(foreach_batch_function_12h)\\\n",
-    ".option(\"checkpointLocation\", \"hdfs:///Projects/card_fraud_demo/Resources/checkpoint-12h\")\\\n",
+    ".option(\"checkpointLocation\", hdfs.project_path() + \"/Resources/checkpoint-12h\")\\\n",
     ".trigger(processingTime=\"10 seconds\")\\\n",
     ".start()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a4d28887",
+   "id": "bb042c75",
    "metadata": {},
    "source": [
     "### Check if queries are still active"
@@ -758,8 +801,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "2b28cfe6",
+   "execution_count": 41,
+   "id": "2a5d4f5f",
    "metadata": {},
    "outputs": [
     {
@@ -776,8 +819,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "257fde30",
+   "execution_count": 42,
+   "id": "8549523d",
    "metadata": {},
    "outputs": [
     {
@@ -794,8 +837,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "388d4d56",
+   "execution_count": 43,
+   "id": "7d4cd267",
    "metadata": {},
    "outputs": [
     {
@@ -812,8 +855,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "14e02b82",
+   "execution_count": 44,
+   "id": "d190367c",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00b1a04d",
+   "id": "18ee4126",
    "metadata": {},
    "source": [
     "### Stop queries\n",
@@ -840,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d510ef65",
+   "id": "d90d5165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "80eb1821",
+   "id": "d1fcc2bd",
    "metadata": {},
    "outputs": [],
    "source": [
