--- a/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7eed4145",
+   "id": "c363e54d",
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1618520805810_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1618520805810_0002/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e01_1618520805810_0002_01_000001/card_fraud__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>7</td><td>application_1619136786197_0008</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619136786197_0008/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619136786197_0008_01_000001/OnlineFSDemo__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ab1ff0",
+   "id": "a6cb0a84",
    "metadata": {},
    "source": [
     "# Create empty feature groups \n",
-    "We expecting to recieve data from Kafka topic, read using spark streaming, do streamig aggregations and ingest to feature groups. Thus we will create empy feature groups where we will ingest streaming data."
+    "In this demo exaple we are expecting to recieve data from Kafka topic, read using spark streaming, do streamig aggregations and ingest aggregated data to feature groups. Thus we will create empy feature groups where we will ingest streaming data."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9269dcfd",
+   "id": "8b76b113",
    "metadata": {},
    "source": [
     "### Define schema for feature groups"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a0ef3ba7",
+   "id": "be50690f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b1f87cd",
+   "id": "59a04d72",
    "metadata": {},
    "source": [
     "### Create empty spark dataframes "
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20c1e7ee",
+   "id": "b3a085f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7d5717",
+   "id": "feacc85c",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5fe10bca",
+   "id": "75e1f659",
    "metadata": {},
    "outputs": [
     {
@@ -136,25 +136,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c6b2675",
+   "id": "fb2be1dc",
    "metadata": {},
    "source": [
-    "### Create feature groups. metadata object and save empty spark dataframes to materialise in hopsworks feature store.\n",
+    "### Create feature group metadata objects and save empty spark dataframes to materialise them in hopsworks feature store.\n",
     "\n",
-    "Now We will create each feature group and enable online feature store. Since we are plannig to use these feature groups durring online model serving primary key(s) are required to retrieve model serving feature vector from online feature store. "
+    "Now We will create each feature group and enable online feature store. Since we are plannig to use these feature groups durring online model serving primary key(s) are required to retrieve feature vector from online feature store. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "680d1145",
+   "execution_count": 5,
+   "id": "73ff6cfa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa7da964d10>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa46a85df50>"
      ]
     }
    ],
@@ -170,15 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b4695c3a",
+   "execution_count": 6,
+   "id": "7169a99c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa7da9d9910>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa46a3debd0>"
      ]
     }
    ],
@@ -194,15 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3a077f99",
+   "execution_count": 7,
+   "id": "9ea66a09",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa7c1d1bd90>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa46a3de510>"
      ]
     }
    ],
@@ -218,15 +218,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "434547a1",
+   "execution_count": 8,
+   "id": "96148435",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7fa7da9d9c90>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa46a3a2250>"
      ]
     }
    ],
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9422363",
+   "id": "e98e4a92",
    "metadata": {},
    "outputs": [],
    "source": []
